@@ -1,3 +1,10 @@
+2011-09-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c, src/utils.h, src/editor.c:
+   Use GRegex for snippet indentation replacement - fixes wrong 
+   behaviour with Mac line endings.
+
+
 2011-09-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c, doc/pluginsignals.c:
